fixtures/abnormal-relative-without-node_modules/foo/bar/baz/test.js
console.log(require.resolve('jest-runner-../../..')) // error

console.log(require.resolve('jest-runner-/../..')) // error

console.log(require.resolve('jest-runner-../..')) // error
